# Projet-BC-CVE

./: .env.example  .gitignore  Doxyfile  LICENSE  Makefile  README.md  README_TECHNIQUE.md  audit_192_168_181_141-exemple.json  main.py  network_audit_exemple.json  pyproject.toml  requirements.txt
docker/: .env.cve_search  .env.glpi  cve_search-docker-compose.yml  glpi-docker-compose.yml
docs/: .gitkeep
src/: __init__.py
src/secu_audit/: __init__.py  config.py  cti_module.py  glpi_module.py  nmap_module.py  utils.py
tests/: .gitkeep  test_utils.py
web/: web-server.py
web/shadcn-dashboard/: index.html  package-lock.json  package.json
web/shadcn-dashboard/src/: App.tsx  index.css  types.ts
web/shadcn-dashboard/src/components/: CVEColumn.tsx  DropZone.tsx  HostTabs.tsx
web/shadcn-dashboard/src/components/ui/: badge.tsx  card.tsx  dialog.tsx  progress.tsx
