[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secu-audit"
version = "1.0.0"
description = "Outil d'audit de sécurité hybride combinant Nmap, GLPI et CVE-Search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Elias GARACH-MALULY"}
    {name = "Mattéo BEZET-TORRES"}
    {name = "Lucas POURRERON"}
    {name = "Daniel SUMBO"}
    {name = "Martial LAUBIER"}
]
keywords = ["security", "audit", "nmap", "cve", "vulnerability", "glpi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
web = [
    "flask>=2.3.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/egarach/secu-audit"
Documentation = "https://github.com/egarach/secu-audit#readme"
Repository = "https://github.com/egarach/secu-audit.git"
Issues = "https://github.com/egarach/secu-audit/issues"

[project.scripts]
secu-audit = "secu_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.xml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | data
  | archive
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/secu_audit --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
